tests/react_16_3/react_16_3.exp
Error ---------------------------------------------------------------------------------------------- forwardRef.js:11:13

Cannot create `FancyButton` element because property `foo` is missing in props [1] but exists in `Props` [2].
[prop-missing]

   forwardRef.js:11:13
   11| const _a = <FancyButton />; // Error, missing foo
                   ^^^^^^^^^^^

References:
   forwardRef.js:11:12
   11| const _a = <FancyButton />; // Error, missing foo
                  ^^^^^^^^^^^^^^^ [1]
   forwardRef.js:5:38
    5| const FancyButton = React.forwardRef<Props, HTMLButtonElement>((props, ref) => (
                                            ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:13:13

Cannot create `FancyButton` element because property `bar` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   forwardRef.js:13:13
   13| const _c = <FancyButton foo={3} bar={3} />; // Error bar, not allowed in exact props
                   ^^^^^^^^^^^

References:
   forwardRef.js:5:38
    5| const FancyButton = React.forwardRef<Props, HTMLButtonElement>((props, ref) => (
                                            ^^^^^ [1]
   forwardRef.js:13:12
   13| const _c = <FancyButton foo={3} bar={3} />; // Error bar, not allowed in exact props
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:19:38

Cannot create `FancyButton` element because in property `ref`: [incompatible-type]
 - Either `HTMLButtonElement` [1] is incompatible with `HTMLDivElement` [2] in property `current`.
 - Or a call signature declaring the expected parameter / return type is missing in object type [3] but exists in
   function type [4].

   forwardRef.js:19:38
    19| const _e = <FancyButton foo={3} ref={badRef} />; // Incorrect ref type
                                             ^^^^^^

References:
   forwardRef.js:5:45
     5| const FancyButton = React.forwardRef<Props, HTMLButtonElement>((props, ref) => (
                                                    ^^^^^^^^^^^^^^^^^ [1]
   forwardRef.js:18:32
    18| const badRef = React.createRef<HTMLDivElement>();
                                       ^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:241:6
   241|   ): {|current: null | T|};
             ^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:178:6
   178|   | ((React$ElementRef<ElementType> | null) => mixed)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:22:38

Cannot create `FancyButton` element because in property `ref`: [incompatible-type]
 - Either property `current` is missing in function [1] but exists in object type [2].
 - Or `HTMLButtonElement` [3] is incompatible with `HTMLDivElement` [4] in the first parameter.

   forwardRef.js:22:38
    22| const _g = <FancyButton foo={3} ref={(x: null | HTMLDivElement) => x} />; // Incorrect ref type
                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   <BUILTINS>/react.js:177:5
   177|   | { -current: React$ElementRef<ElementType> | null, ... }
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   forwardRef.js:5:45
     5| const FancyButton = React.forwardRef<Props, HTMLButtonElement>((props, ref) => (
                                                    ^^^^^^^^^^^^^^^^^ [3]
   forwardRef.js:22:49
    22| const _g = <FancyButton foo={3} ref={(x: null | HTMLDivElement) => x} />; // Incorrect ref type
                                                        ^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:42:35

Cannot create `UnionRef` element because in property `ref`: [incompatible-type]
 - Either `HTMLAnchorElement` [1] is incompatible with `HTMLButtonElement` [2] in property `current`.
 - Or `HTMLAnchorElement` [1] is incompatible with `HTMLDivElement` [3] in property `current`.
 - Or a call signature declaring the expected parameter / return type is missing in object type [4] but exists in
   function type [5].

   forwardRef.js:42:35
    42| const _j = <UnionRef foo={3} ref={badUnionRef} />; // Error bad ref
                                          ^^^^^^^^^^^

References:
   forwardRef.js:28:23
    28|   HTMLButtonElement | HTMLAnchorElement,
                              ^^^^^^^^^^^^^^^^^ [1]
   forwardRef.js:41:37
    41| const badUnionRef = React.createRef<HTMLButtonElement | HTMLDivElement>();
                                            ^^^^^^^^^^^^^^^^^ [2]
   forwardRef.js:41:57
    41| const badUnionRef = React.createRef<HTMLButtonElement | HTMLDivElement>();
                                                                ^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:241:6
   241|   ): {|current: null | T|};
             ^^^^^^^^^^^^^^^^^^^^^ [4]
   <BUILTINS>/react.js:178:6
   178|   | ((React$ElementRef<ElementType> | null) => mixed)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [5]



Found 5 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
